--- a/_site.yml
+++ b/_site.yml
@@ -6,12 +6,16 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
-      href: about.html
+    - text: "Professional Documents"
+      menu:
+          - text: "Resume"
+            href: resume.html
     - icon: fa-envelope fa-lg
-      href: mailto:<nevil066@umn.edu>
+      href: mailto:<mjdasilv@umn.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/nevilleq/
+      href: http://github.com/maykondasilva/
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/maykon-junior-da-silva-424742140/
 output:  
    html_document:
     theme: flatly
